change rzd admin setiings

--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -9,10 +9,10 @@
 <title>{% block title %}Главная{% endblock %} - Про100учет</title>
 {% block head %}{% endblock %}
 {# Load CSS and JavaScript #}
-{#% bootstrap_css %#}
-<link rel="stylesheet" {% static bootstrap_css_url %}>
-<link rel="stylesheet" {% static bootstrap_css %}>
-<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+{% bootstrap_css %}
+<!--link rel="stylesheet" {% static bootstrap_css_url %}-->
+<!--link rel="stylesheet" {% static bootstrap_css %}-->
+<!--link rel="stylesheet" href="/static/css/bootstrap.min.css"-->
 <link rel="stylesheet" href="{% static 'web/css/main.css' %}">
 <link rel="stylesheet" href="{% static 'web/css/nav.css' %}">
 <!--disabled in debug link rel="stylesheet" href="{% static 'style.css' %}"-->
