same menu chnged

--- a/web/templates/web/password_change.html
+++ b/web/templates/web/password_change.html
@@ -1,19 +1,22 @@
 {% extends "web/base.html" %}
 {% load django_bootstrap5 %}
-{% block title %}Вход{% endblock %}
+{% block title %}Смена пароля{% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
-{% bootstrap_alert "Вы уже выполнили вход." alert_type='info' %}
-{% else %}
+
 <form method="post">
     {% csrf_token %}
     {#% bootstrap_form form layout=’horizontal’ %#}
     {% bootstrap_form form %}
-    {% bootstrap_button "Войти" button_type="submit" button_class="btn-primary" %}
+    {% bootstrap_button "Сменить пароль" button_type="submit" button_class="btn-primary" %}
     {% bootstrap_button "Отмена" button_type="reset" button_class="btn-primary" %}
     <input type="hidden" name="next" value="/">
     <p class="text-center">Forgot your password <a href="#">Reset Password</a></p>
     <p class="text-center">Don't have a account? <a href="#">Join Now</a></p>
 </form>
+
+{% else %}
+
+{% bootstrap_alert "Для смены пароля надо войти." alert_type='info' %}
 {% endif %}
 {% endblock %}
