--- a/web/templates/web/nav.html
+++ b/web/templates/web/nav.html
@@ -14,13 +14,14 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownRZD" role="button"
+                       data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         РЖД
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="1">Дороги</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownRZD">
                         <a class="dropdown-item" href="{% url 'road' %}">Дороги</a>
+                        <a class="dropdown-item" href="{% url 'road_view' %}">Дороги</a>
+                        <a class="dropdown-item" href="{% url 'road_view_def' %}">Дороги</a>
                         <a class="dropdown-item" href="{% url 'region' %}">Регионы</a>
                         <a class="dropdown-item" href="{% url 'station' %}">Станции</a>
                         <a class="dropdown-item" href="{% url 'station-table' %}">Станции (таблица)</a>
@@ -41,12 +42,13 @@
                     <a class="nav-link " href="#">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProfile" type="button"
+                       data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Профиль
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownProfile">
                         <a class="dropdown-item" href="#">Редактировать</a>
+                        <a class="dropdown-item" href="{% url 'password_change' %}">Сменить пароль</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'logout' %}">Выход</a>
                     </div>
