--- a/web/templates/web/password_change.html
+++ b/web/templates/web/password_change.html
@@ -8,11 +8,9 @@
     {% csrf_token %}
     {#% bootstrap_form form layout=’horizontal’ %#}
     {% bootstrap_form form %}
-    {% bootstrap_button "Сменить пароль" button_type="submit" button_class="btn-primary" %}
-    {% bootstrap_button "Отмена" button_type="reset" button_class="btn-primary" %}
+    {% bootstrap_button "Сменить пароль" button_type="submit" button_class="btn-success" %}
+    {% bootstrap_button "Отмена" button_type="reset" button_class="btn-info" %}
     <input type="hidden" name="next" value="/">
-    <p class="text-center">Forgot your password <a href="#">Reset Password</a></p>
-    <p class="text-center">Don't have a account? <a href="#">Join Now</a></p>
 </form>
 
 {% else %}
