--- a/web/templates/web/password_reset.html
+++ b/web/templates/web/password_reset.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     {#% bootstrap_form form layout=’horizontal’ %#}
     {% bootstrap_form form %}
-    {% bootstrap_button "Востановить пароль" button_type="submit" button_class="btn-primary" %}
-    {% bootstrap_button "Отмена" button_type="reset" button_class="btn-primary" %}
+    {% bootstrap_button "Востановить пароль" button_type="submit" button_class="btn-success" %}
+    {% bootstrap_button "Отмена" button_type="reset" button_class="btn-info" %}
 </form>
 {% endblock %}
