--- a/web/templates/web/login.html
+++ b/web/templates/web/login.html
@@ -9,11 +9,10 @@
     {% csrf_token %}
     {#% bootstrap_form form layout=’horizontal’ %#}
     {% bootstrap_form form %}
-    {% bootstrap_button "Войти" button_type="submit" button_class="btn-primary" %}
-    {% bootstrap_button "Отмена" button_type="reset" button_class="btn-primary" %}
+    {% bootstrap_button "Войти" button_type="submit" button_class="btn-success" %}
+    {% bootstrap_button "Отмена" button_type="reset" button_class="btn-info" %}
     <input type="hidden" name="next" value="/">
-    <p class="text-center">Forgot your password <a href="#">Reset Password</a></p>
-    <p class="text-center">Don't have a account? <a href="#">Join Now</a></p>
+    <a href="{% url 'password_reset' %}" {% bootstrap_button "Забыл пароль" button_class="btn-warning" %}</a>
 </form>
 {% endif %}
 {% endblock %}
