--- a/web/templates/web/nav.html
+++ b/web/templates/web/nav.html
@@ -20,13 +20,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownRZD">
                         <a class="dropdown-item" href="{% url 'road' %}">Дороги</a>
-                        <a class="dropdown-item" href="{% url 'road_view' %}">Дороги</a>
-                        <a class="dropdown-item" href="{% url 'road_view_def' %}">Дороги</a>
                         <a class="dropdown-item" href="{% url 'region' %}">Регионы</a>
                         <a class="dropdown-item" href="{% url 'station' %}">Станции</a>
                         <a class="dropdown-item" href="{% url 'station-table' %}">Станции (таблица)</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="{% url 'road_table' %}">test</a>
                     </div>
                 </li>
                 <li class="nav-item">
